--- a/src/index.css
+++ b/src/index.css
@@ -5,31 +5,31 @@ html {
 /* HeroCards background shadow */
 .shadow {
   position: absolute;
-  background: hsl(var(--primary) / 0%);
+  background: hsl(278, 86%, 75%);
   border-radius: 24px;
   rotate: 35deg;
 
   width: 500px;
   top: 200px;
   height: 400px;
-  filter: blur(150px);
+  filter: blur(200px);
   animation: shadow-slide infinite 4s linear alternate;
 }
 
 @keyframes shadow-slide {
   from {
-    background: hsl(var(--primary) / 20%);
-    right: 460px;
+    background: hsl(278, 86%, 75%/ 20%);
+    right: 560px;
   }
   to {
-    background: hsl(var(--primary) / 80%);
-    right: 160px;
+    background: hsl(var(--primary) / 30%);
+    right: 60px;
   }
 }
 
 @media (max-width: 1024px) {
   .shadow {
-    top: 70px;
+    top: 100px;
   }
 
   @keyframes shadow-slide {
@@ -38,7 +38,7 @@ html {
       right: 460px;
     }
     to {
-      background: hsl(var(--primary) / 50%);
+      background: hsl(var(--primary) / 100%);
       right: 160px;
     }
   }
